# advent-of-code-2022

./: .gitignore  CMakeLists.txt  README.md  main.in.cpp
src/: aoc_utility.h
src/day1/: main.cpp  main.old.cpp
src/day2/: main.cpp
src/day3/: input.txt  main.cpp
src/day4/: main.cpp
src/day5/: input.txt  main.cpp
